--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.10.6",
     "swiper": "^11.0.7"
